--- a/deep_learning_intro.ipynb
+++ b/deep_learning_intro.ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "! [ -e /content ] && pip install -Uqq fastbook\n",
+    "pip install -Uqq fastbook\n",
     "import fastbook\n",
     "fastbook.setup_book()\n",
     "from fastbook import *\n",
