--- a/deep_learning_intro.ipynb
+++ b/deep_learning_intro.ipynb
@@ -12,10 +12,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "TSVEDqXqTkAZ",
-        "outputId": "0281b48d-c235-47de-bfe0-0c60cf274072",
+        "outputId": "de02ac7f-68bc-4466-fa26-1183ab2e67f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -25,17 +25,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m719.8/719.8 kB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.4/7.4 MB\u001b[0m \u001b[31m111.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m486.2/486.2 kB\u001b[0m \u001b[31m51.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m60.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m110.5/110.5 kB\u001b[0m \u001b[31m14.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m212.5/212.5 kB\u001b[0m \u001b[31m28.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.3/134.3 kB\u001b[0m \u001b[31m18.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m268.8/268.8 kB\u001b[0m \u001b[31m33.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.8/7.8 MB\u001b[0m \u001b[31m25.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m65.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m43.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m719.8/719.8 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.4/7.4 MB\u001b[0m \u001b[31m38.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m486.2/486.2 kB\u001b[0m \u001b[31m40.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m61.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m110.5/110.5 kB\u001b[0m \u001b[31m16.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m212.5/212.5 kB\u001b[0m \u001b[31m23.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.8/134.8 kB\u001b[0m \u001b[31m18.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m268.8/268.8 kB\u001b[0m \u001b[31m32.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.8/7.8 MB\u001b[0m \u001b[31m100.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m77.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m63.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.3/134.3 kB\u001b[0m \u001b[31m21.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -57,20 +58,17 @@
         "def is_cat(x): return x[0].isupper()\n",
         "dls = ImageDataLoaders.from_name_func(\n",
         "    path, get_image_files(path), valid_pct=0.2, seed=42,\n",
-        "    label_func=is_cat, item_tfms=Resize(224))\n",
-        "\n",
-        "learn = vision_learner(dls, resnet34, metrics=error_rate)\n",
-        "learn.fine_tune(1)"
+        "    label_func=is_cat, item_tfms=Resize(224))"
       ],
       "metadata": {
         "id": "Y3OEWshnTmjg",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 302
+          "height": 54
         },
-        "outputId": "fd54d168-4e0b-42c9-d1e8-e1a846b066cd"
+        "outputId": "1c69b062-67ee-4b74-cf52-af767de4f544"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,13 +114,29 @@
               "\n",
               "    <div>\n",
               "      <progress value='811712512' class='' max='811706944' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      100.00% [811712512/811706944 00:59&lt;00:00]\n",
+              "      100.00% [811712512/811706944 00:24&lt;00:00]\n",
               "    </div>\n",
               "    "
             ]
           },
           "metadata": {}
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "learn = vision_learner(dls, resnet34, metrics=error_rate)\n"
+      ],
+      "metadata": {
+        "id": "1_QKbcXs83fg",
+        "outputId": "06c0fe03-766c-410e-8346-5d84d9fb6420",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
@@ -132,9 +146,26 @@
             "/usr/local/lib/python3.10/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet34_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet34_Weights.DEFAULT` to get the most up-to-date weights.\n",
             "  warnings.warn(msg)\n",
             "Downloading: \"https://download.pytorch.org/models/resnet34-b627a593.pth\" to /root/.cache/torch/hub/checkpoints/resnet34-b627a593.pth\n",
-            "100%|██████████| 83.3M/83.3M [00:01<00:00, 64.0MB/s]\n"
+            "100%|██████████| 83.3M/83.3M [00:00<00:00, 231MB/s]\n"
           ]
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "learn.fine_tune(2)"
+      ],
+      "metadata": {
+        "id": "55q45jWAWcW0",
+        "outputId": "6ca4963d-5779-4e59-8081-ab0efacbc132",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
         {
           "output_type": "display_data",
           "data": {
@@ -182,10 +213,10 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>0</td>\n",
-              "      <td>0.177406</td>\n",
-              "      <td>0.021973</td>\n",
-              "      <td>0.006089</td>\n",
-              "      <td>01:12</td>\n",
+              "      <td>0.164286</td>\n",
+              "      <td>0.017021</td>\n",
+              "      <td>0.006766</td>\n",
+              "      <td>01:15</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>"
@@ -240,10 +271,17 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>0</td>\n",
-              "      <td>0.054801</td>\n",
-              "      <td>0.013584</td>\n",
-              "      <td>0.004736</td>\n",
-              "      <td>01:06</td>\n",
+              "      <td>0.064321</td>\n",
+              "      <td>0.015112</td>\n",
+              "      <td>0.006089</td>\n",
+              "      <td>01:07</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>0.039505</td>\n",
+              "      <td>0.008069</td>\n",
+              "      <td>0.002706</td>\n",
+              "      <td>01:07</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>"
@@ -256,9 +294,6 @@
     {
       "cell_type": "code",
       "source": [
-        "img = PILImage.create(image_cat())\n",
-        "img.to_thumb(192)\n",
-        "\n",
         "uploader = widgets.FileUpload()\n",
         "uploader"
       ],
@@ -268,14 +303,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 49,
           "referenced_widgets": [
-            "9b5ba0b2691640d79e71993da808ff83",
-            "06bc37fea2884000be3202df26f6bb8a",
-            "ef455b7fc87f48e78d3696b11f403c2e"
+            "2b813ff8655d434aba0fab244d671b6a",
+            "fcda201f06434fcbb84c8595c2f0c124",
+            "f0569a9086ef475e9ce49f31fa289f87"
           ]
         },
-        "outputId": "69a6fe4c-6744-4499-8a77-0a87e6d92906"
+        "outputId": "186f7feb-a009-4926-e65c-65781ed5b8fb"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -286,7 +321,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "9b5ba0b2691640d79e71993da808ff83"
+              "model_id": "2b813ff8655d434aba0fab244d671b6a"
             }
           },
           "metadata": {}
@@ -304,12 +339,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         },
         "id": "zYmZoseOX8ok",
-        "outputId": "770aca47-ea23-46c7-cb9f-99f4ed189b04"
+        "outputId": "025a36ff-8ad8-4981-dd08-2668d12fb053"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -377,7 +412,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "9b5ba0b2691640d79e71993da808ff83": {
+        "2b813ff8655d434aba0fab244d671b6a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FileUploadModel",
           "model_module_version": "1.5.0",
@@ -401,20 +436,20 @@
             "disabled": false,
             "error": "",
             "icon": "upload",
-            "layout": "IPY_MODEL_06bc37fea2884000be3202df26f6bb8a",
+            "layout": "IPY_MODEL_fcda201f06434fcbb84c8595c2f0c124",
             "metadata": [
               {
-                "name": "07CAT-STRIPES-superJumbo.jpg.webp",
-                "type": "image/webp",
-                "size": 195202,
-                "lastModified": 1689924980000
+                "name": "cat-10-e1573844975155-scaled.jpg",
+                "type": "image/jpeg",
+                "size": 334320,
+                "lastModified": 1690187482662
               }
             ],
             "multiple": false,
-            "style": "IPY_MODEL_ef455b7fc87f48e78d3696b11f403c2e"
+            "style": "IPY_MODEL_f0569a9086ef475e9ce49f31fa289f87"
           }
         },
-        "06bc37fea2884000be3202df26f6bb8a": {
+        "fcda201f06434fcbb84c8595c2f0c124": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -466,7 +501,7 @@
             "width": null
           }
         },
-        "ef455b7fc87f48e78d3696b11f403c2e": {
+        "f0569a9086ef475e9ce49f31fa289f87": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
